fix issue #139: Font size for quotations is too big

--- a/app/public/bootstrap/css/bootstrap.css
+++ b/app/public/bootstrap/css/bootstrap.css
@@ -625,7 +625,6 @@ blockquote {
 
 blockquote p {
   margin-bottom: 0;
-  font-size: 16px;
   font-weight: 300;
   line-height: 22.5px;
 }
